--- a/_config.yml
+++ b/_config.yml
@@ -11,17 +11,17 @@ safe: true
 
 
 # edit here to achieve your personal greatness
-url: http://username.github.io/
-baseurl: /sustain/
-title: Chris Turner
-author: Chris Turner
+url: https://nguyenphi0205.github.io/
+baseurl: /PhiNguyen/
+title: Phi Nguyen
+author: Phi Nguyen
 description: Personal blog and resume
-avatar: profile.png
-email: yourname@email.com
-github: biomadeira/sustain # username
+avatar: demo.jpg
+email: nguyenphi0511@yahoo.com.vn
+github: nguyenphi0205 # username
 twitter: username
-linkedin: username
-stackoverflow: username   #e.g: users/2735833/proton1h1
+linkedin: phi-nguyen-96079413b/
+stackoverflow: users/9642748/phi-nguyen   #e.g: users/2735833/proton1h1
 #Comment out if you don't want disqus 
 disqus: username
 google_analytics: UA-69391421-1
