--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ avatar: demo.jpg
 email: nguyenphi0511@yahoo.com.vn
 github: nguyenphi0205 # username
 twitter: username
-linkedin: phi-nguyen-96079413b/
+linkedin: in/phi-nguyen-96079413b/
 stackoverflow: users/9642748/phi-nguyen   #e.g: users/2735833/proton1h1
 #Comment out if you don't want disqus 
 disqus: username
