--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,8 @@ safe: true
 
 # edit here to achieve your personal greatness
 url: https://nguyenphi0205.github.io/
-baseurl: /PhiNguyen/
+baseurl: ./_layouts/PhiNguyen/
+Angular: /_layouts/Angular
 title: Phi Nguyen
 author: Phi Nguyen
 description: Personal blog and resume
