--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,9 @@ safe: true
 
 # edit here to achieve your personal greatness
 url: https://nguyenphi0205.github.io/
-baseurl: ./_layouts/PhiNguyen/
-Angular: Angular/
+# baseurl: /PhiNguyen/
+About-me: /About-me/
+Angular: /Angular/
 title: Phi Nguyen
 author: Phi Nguyen
 description: Personal blog and resume
