add new file and modify

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ url: https://nguyenphi0205.github.io/
 # baseurl: /PhiNguyen/
 About-me: /About-me/
 Angular: /Angular/
+Javascript: /Javascript/
 title: Phi Nguyen
 author: Phi Nguyen
 description: Personal blog and resume
