--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ url: https://nguyenphi0205.github.io/
 About-me: /About-me/
 Angular: /Angular/
 Javascript: /JavaScript/
-CSS: /css/
+CSS: /CSS/
 title: Phi Nguyen
 author: Phi Nguyen
 description: Personal blog and resume
