--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ url: https://nguyenphi0205.github.io/
 # baseurl: /PhiNguyen/
 About-me: /About-me/
 Angular: /Angular/
+React: /React/
 Javascript: /JavaScript/
 css: /CSS/
 title: Phi Nguyen
